fabric/testdata/out/ing_spp-homer-post-api-supplier-products-rl-users-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/backend-weights":"{\"spp-homer-master-367\":0.0,\"spp-homer-master-368\":100.0}","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"https://identity.zalando.com/managed-id\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e clusterClientRatelimit(\"spp-homer_api-supplier-products_POST_users\",
      3000, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/api/supplier-products\") \u0026\u0026 Method(\"POST\") \u0026\u0026
      JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\", \"cgallagher\",
      \"https://identity.zalando.com/managed-id\", \"operbellini\", \"https://identity.zalando.com/managed-id\",
      \"soceanainn\", \"https://identity.zalando.com/managed-id\", \"dagordon\", \"https://identity.zalando.com/managed-id\",
      \"zszekely\", \"https://identity.zalando.com/managed-id\", \"matgonzalez\",
      \"https://identity.zalando.com/managed-id\", \"brcullen\", \"https://identity.zalando.com/managed-id\",
      \"psuchon\", \"https://identity.zalando.com/managed-id\", \"spramanick\", \"https://identity.zalando.com/managed-id\",
      \"fmoloney\", \"https://identity.zalando.com/managed-id\", \"ralmeida\", \"https://identity.zalando.com/managed-id\",
      \"snesterenko\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"3929699d-cba0-11e8-90e2-0618dc6898fa","deployment-id":"d-nq71pi3pjq8siqfx3i5toz322","pipeline-id":"l-o49bo3978wd8mgk5o73i8aim6"},"name":"spp-homer-post-api-supplier-products-rl-users-all","namespace":"default"},"spec":{"rules":[{"host":"spp-homer.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-homer-master-367","servicePort":8080},"pathType":"Implementa [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/backend-weights: '{"spp-homer-master-367":0.0,"spp-homer-master-368":100.0}'
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> clusterClientRatelimit("spp-homer_api-supplier-products_POST_users",
      3000, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(4) && Path("/api/supplier-products") &&
      Method("POST") && JWTPayloadAnyKV("https://identity.zalando.com/managed-id",
      "cgallagher", "https://identity.zalando.com/managed-id", "operbellini", "https://identity.zalando.com/managed-id",
      "soceanainn", "https://identity.zalando.com/managed-id", "dagordon", "https://identity.zalando.com/managed-id",
      "zszekely", "https://identity.zalando.com/managed-id", "matgonzalez", "https://identity.zalando.com/managed-id",
      "brcullen", "https://identity.zalando.com/managed-id", "psuchon", "https://identity.zalando.com/managed-id",
      "spramanick", "https://identity.zalando.com/managed-id", "fmoloney", "https://identity.zalando.com/managed-id",
      "ralmeida", "https://identity.zalando.com/managed-id", "snesterenko") && Header("X-Forwarded-Proto",
      "https")
  creationTimestamp: "2020-03-30T11:39:46Z"
  generation: 277
  labels:
    controller-uid: 3929699d-cba0-11e8-90e2-0618dc6898fa
    deployment-id: d-nq71pi3pjq8siqfx3i5toz322
    pipeline-id: l-o49bo3978wd8mgk5o73i8aim6
  name: spp-homer-post-api-supplier-products-rl-users-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-homer
    uid: 3929699d-cba0-11e8-90e2-0618dc6898fa
  resourceVersion: "1379152617"
  uid: 92ba38c4-ff57-4ad5-87ce-4e449501c7fb
spec:
  rules:
  - host: spp-homer.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-homer-master-367
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-homer-master-368
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: spp-homer-api.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-homer-master-367
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-homer-master-368
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: spp-supplier-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-homer-master-367
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-homer-master-368
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
